# QtPlayground

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-x86_64-w64-mingw32.cmake
src/: a.cpp  b.cpp  config.xml  main.cpp  prettyprint.hpp
